    setting value
  * Fixes: NB#223192 - Context sensitive help icon is shown as if it is
    inactive.

  [ Robert Manner ]
  * Fixes some little DBus API problems when running in outprocess mode
    (on appletpage requests)
  * New: the applet can specify in its .desktop file if it has a
    mainview through DCP/HasMainView key
  * Fixes flickering at applet mainview opening in outprocess mode

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Feb 2011 13:35:10 +0100

duicontrolpanel (0.11.4) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220025 - a proposal to change #CommonXLargeHeaderInverted
    to #CommonApplicationHeaderInverted

  [ Robert Manner ]
  * Fixes: NB#220539 - toolbar at the bottom is not inverted, but
    becomes inverted when you click on a connection or phone applet
  * Fixes: NB#220868 - Constant memory usage inclureas memory leak could
    be seen in duicontrolpanel

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 21 Jan 2011 12:35:15 +0100

duicontrolpanel (0.11.3) unstable; urgency=low

  [ Robert Manner ]
  * Changes: mostused build option is working again
  * Fixes: NB#218906 - Settings app goes invisible when we tap on Feeds
    item in the Notifications view
  * Fixes: NB#218900 - settings UI is shown in applet view when tried to
    relaunch in a given scenario
  * Fixes: NB#214650 - It is not possible for an applet to disable
    itself run-time

  [ Sandor Pinter ]
  * Fixes: NB#219212 - 'Events feeds' not aligned properly in
    Notifications view.
  * Fixes: NB#219608 - drilldown icon is black in the list items which
    use the style when it should be white
  * Fixes: NB#219156 - Activate/Deactivate Offline mode button in
    connections is not consistent with the inverted theme.

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 18 Jan 2011 17:28:13 +0100

duicontrolpanel (0.11.2.1) unstable; urgency=low

  * Temporarily disables running applets outprocess by default, since it